scheduler twitter search

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,9 @@
 development:
   adapter: postgresql
-  database: bootsoccer
+  database: boot_soccer
   host: localhost
+  username: postgres
+  password: postgres
 
 production:
   url: <%= ENV['DATABASE_URL'] %>
