--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 /log/*
 !/log/.keep
 /tmp
+
+# TODO Comment out this rule if you are OK with secrets being uploaded to the repo
+config/initializers/secret_token.rb
+
+# Only include if you have production secrets in this file, which is no longer a Rails default
+config/secrets.yml
