scheduler twitter record tweets. fix environment

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,5 +5,8 @@ development:
   username: postgres
   password: postgres
 
+test:
+  url: <%= ENV['DATABASE_URL'] %>
+
 production:
   url: <%= ENV['DATABASE_URL'] %>
