--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,4 @@
 config/initializers/secret_token.rb
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
-config/secrets.yml
+# config/secrets.yml
