--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ config/initializers/secret_token.rb
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
 config/secrets.yml
+config/database.yml
